# benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  build.sh  results_gcc9_clang11.txt  results_luajit_clang11.txt  results_rust_cpp17  rv32-binary  rv64-binary  rvbinary
luaprogram/: script.lua
rvprogram/: CMakeLists.txt  build.sh  build64.sh  build_clang.sh  libc  show_popularity.sh  symbols.map  toolchain.cmake
rvprogram/ext/: CMakeLists.txt
rvprogram/libc/: assert.cpp  heap.hpp  libc.c  start.cpp
rvprogram/libc/include/: syscall.hpp
rvprogram/rustbin/: Cargo.toml  build.sh
rvprogram/rustbin/src/: main.rs
rvprogram/src/: rvmain.cpp
src/: luascript.cpp  luascript.hpp  main.cpp  native.cpp  selftest.cpp  syscalls.cpp  syscalls.hpp  test1.cpp  testhelp.hpp
src/include/: crc32.hpp
