[package]
name = "rustbin"
version = "0.1.0"
authors = ["Alf-André Walla <fwsgonzo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target="riscv32imac-unknown-none-elf"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
